--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-	<div class="container">
+	<div class="container mt-5">
 		<div class="row">
 			<div class="col-md-12">
 				<textarea id="sql" rows="10" style="width: 100%"></textarea>
@@ -22,10 +22,11 @@
 		
 	</div>
 
+	<script type="text/javascript" src="./js/sql.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="./js/papaparse.min.js"></script>
 	<script type="text/javascript" src="./js/loadCsv.js"></script>  
-
+	<script type="text/javascript" src="./js/generateSQL.js"></script>
 </body>
 </html>
