--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 			border: 1px solid black;
 			border-collapse: collapse;
 		}
+		table {
+			margin-top: 10px;
+		}
 	</style>
 </head>
 
@@ -45,6 +48,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="./js/gui.js"></script>
 	<script type="text/javascript" src="./js/sql.js"></script>
+	<script type="text/javascript" src="./js/sqljs/sql-wasm.js"></script>
 	<script type="text/javascript" src="./js/papaparse.min.js"></script>
 	<script type="text/javascript" src="./js/util.js"></script>
 	<script type="text/javascript" src="./js/loadCsv.js"></script>
